fix gap

--- a/style.css
+++ b/style.css
@@ -196,7 +196,6 @@ body {
   flex-direction: row;
   align-items: center;
   justify-content: space-around;
-  margin-top: 10px;
 }
 
 .logo {
